[package]
name = "cobalt-web"
description = "A simple static web framework, enabling individuals to build beautiful websites fast.  Written in Rust."
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Joseph Hobbs"]
repository = "https://github.com/hobbsbros/cobalt.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cobalt"
path = "src/main.rs"

[dependencies]
toml = "0.5.9"
walkdir = "2.3.2"
colored = "2.0.0"
serde = "1.0.139"
serde_derive = "1.0.139"